// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo component Should render according to the snapshot 1`] = `
<div>
  <div
    class="logo"
  >
    <a
      aria-current="page"
      class="logo__link logo__link--active"
      href="/"
    >
      <span
        class="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        class="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        class="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
</div>
`;

exports[`Logo component Should render according to the snapshot when isLight 1`] = `
<div>
  <div
    class="logo"
  >
    <a
      aria-current="page"
      class="logo__link logo__link--light logo__link--active"
      href="/"
    >
      <span
        class="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        class="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        class="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
</div>
`;

exports[`Logo component Should render according to the snapshot when user navigates away from '/' url 1`] = `
<div>
  <div
    class="logo"
  >
    <a
      class="logo__link"
      href="/"
    >
      <span
        class="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        class="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        class="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
</div>
`;
